desktop-base (0.3.16) UNRELEASED; urgency=low

  * backgrounds/debian-background.svg, debian/copyright,
    debian/{postinst,prerm}, Makefile:
  - added background provided by Josselin Mouette <joss@debian.org>
    to fit good with GNOME2.12's splash and theme look
    (Closes: #332873)
  * debian/prerm:
  - fixed bashism -o -> ] || [
  * debian/control.in:
  - added, updated Standards-Version to 3.6.2 with no changes

 -- Gustavo Noronha Silva <kov@debian.org>  Sun,  9 Oct 2005 16:05:34 -0300

desktop-base (0.3.15) unstable; urgency=low

  * postinst, prerm:
  - use alternatives to provide the default background and splash
  * backgrounds/debblue-1600x1200.png:
  - added debblue's largest background
  * debian/copyright:
  - updated to mention the debblue copyright/license
  * emblems/emblem-debian.{png,icon}:
  - added emblem for hicolor theme contributed by
    Dan Korostelev <dan@ats.energo.ru> (Closes: #257923)
  * Makefile:
  - install emblem in /usr/share/icons/hicolor/48x48/emblems/
  - install debblue background, and splash and make them 
    the default

 -- Gustavo Noronha Silva <kov@debian.org>  Sat, 23 Oct 2004 23:34:52 -0300

desktop-base (0.3.14) unstable; urgency=low

  * pixmaps/debian-official-logo-small.png:
  - remove official logo as it is not DFSG-free (Closes: #246784)
  * debian/control:
  - Recommends: epiphany-browser | konqueror | www-browser

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 11 May 2004 17:25:09 -0300

desktop-base (0.3.13) unstable; urgency=low

  * debian/postinst:
  - modified the check for $2 being empty
    (Closes: #242059)

 -- Gustavo Noronha Silva <kov@debian.org>  Sun,  4 Apr 2004 16:43:11 -0300

desktop-base (0.3.12) unstable; urgency=medium

  * debian/preinst:
  - remove the alternative stuff first to make it possible
    to remove the diversion
    (Closes: #241439, #241402, #241339, #241463)
  * splash/Splash-EvolvingTux.png:
  - remove while I try to sort out the legal issues